Fixes issues where website was not responsive on mobile devices

--- a/src/app/features.module.css
+++ b/src/app/features.module.css
@@ -16,10 +16,10 @@
   height: auto;
   max-width: 1920px;
   justify-content: center;
+  overflow: hidden;
 }
 
 .img {
-  min-width: 960px;
   max-width: 1920px;
   aspect-ratio: 1920 / 650;
   width: 100%;
@@ -86,5 +86,29 @@
 @media (max-width: 750px) {
   .textDiv {
     margin-left: 20%;
+  }
+}
+
+@media (max-width: 700px) {
+  .mainDiv {
+    padding-top: 0px;
+    padding-bottom: 10px;
+  }
+
+  .singleFeatureDiv {
+    flex-direction: column;
+  } 
+
+  .img {
+    width: 200%;
+    transform: translateX(-45%);
+  }
+
+  .textDiv {
+    position: relative;
+    width: 100%;
+    margin-left: 0%;
+    padding: 10px;
+    gap: 5px;
   }
 }
